fix display of results list, bindings, spacing, etc

--- a/client/assets/sass/search.scss
+++ b/client/assets/sass/search.scss
@@ -64,13 +64,17 @@
   .panel-body{
     height: 645px;
     overflow: scroll;
+
+    ul > li > dl{
+      margin-bottom: 0;
+    }
   }
 
   .details-container{
     height: 750px;
   }
 
-  .nav.nav-tabs > li.active > a{
+  .nav.nav-tabs > li.active > a {
     border: 1px solid #ddd;
   }
 }
@@ -85,3 +89,4 @@
   background-image: url(../img/layers-2x.png);
   background-size: 26px 26px;
 }
+
